fix page control button margin on mobile.

--- a/sass/wide/article-list.sass
+++ b/sass/wide/article-list.sass
@@ -51,8 +51,8 @@ div#article-list-inner
             margin: 0 0.5em
     span#single-page-control-prev
         float: left
-        margin-left: 3em
+        @include margin-left(2em, 1em)
     span#single-page-control-next
         float: right
-        margin-right: 3em
+        @include margin-right(2em, 1em)
 
