--- a/sass/wide/mixincommons.sass
+++ b/sass/wide/mixincommons.sass
@@ -11,6 +11,11 @@
     @media screen and (max-width: $mobile-max)
         display: block
         margin: 0 auto
+@mixin margin-right($desktop, $mobile)
+    @media screen and (max-width: $mobile-max)
+        margin-right: $mobile
+    @media screen and (min-width: $mobile-max)
+        margin-right: $desktop
 @mixin margin-left($desktop, $mobile)
     @media screen and (max-width: $mobile-max)
         margin-left: $mobile
